[gd_scene load_steps=10 format=3 uid="uid://bhhpsdlqlcn50"]

[ext_resource type="Script" uid="uid://bp6nurwih2ais" path="res://main_menu.gd" id="1_jix8l"]
[ext_resource type="Theme" uid="uid://dmjqb0k5k0xy6" path="res://base_theme.tres" id="2_fu7sn"]
[ext_resource type="PackedScene" uid="uid://rmpiixnafs2u" path="res://player_placeholder.tscn" id="3_glbon"]
[ext_resource type="FontFile" uid="uid://crj288tl1mnom" path="res://fonts/Super Peace.ttf" id="3_jix8l"]
[ext_resource type="PackedScene" uid="uid://pwpoy0m5qg7q" path="res://ranking.tscn" id="5_glbon"]

[sub_resource type="GDScript" id="GDScript_glbon"]

[sub_resource type="BoxShape3D" id="BoxShape3D_glbon"]
size = Vector3(60, 3, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_glbon"]
albedo_color = Color(0.372549, 0.686275, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_nlkkf"]
material = SubResource("StandardMaterial3D_glbon")
size = Vector3(200, 2, 200)

[node name="MainMenu" type="CanvasLayer" node_paths=PackedStringArray("focus_button")]
script = ExtResource("1_jix8l")
focus_button = NodePath("Menu/VBoxContainer/StartGame")

[node name="Node3D" type="Node3D" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Node3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Node3D/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(720, 540)
render_target_update_mode = 4
script = SubResource("GDScript_glbon")

[node name="Camera3D" type="Camera3D" parent="Node3D/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.642694, 0.766123, 0, -0.766123, 0.642694, 0, 28.4989, 13.6724)
projection = 1
size = 22.63
near = 0.011

[node name="Ground" type="StaticBody3D" parent="Node3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/Ground"]
shape = SubResource("BoxShape3D_glbon")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/Ground"]
mesh = SubResource("BoxMesh_nlkkf")

[node name="Player" parent="Node3D" instance=ExtResource("3_glbon")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.76612, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 0)
shadow_enabled = true

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -100.0
offset_right = 108.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="StartGame" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_fu7sn")
text = "Start Game"

[node name="Ranking" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_fu7sn")
text = "Ranking
"

[node name="ExitGame" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_fu7sn")
text = "Exit Game
"

[node name="Label" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.5
offset_top = -204.0
offset_right = 253.5
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.973569, 0.541896, 0.233062, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_fonts/font = ExtResource("3_jix8l")
theme_override_font_sizes/font_size = 54
text = "Squash the Creeps 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ranking" parent="Menu" instance=ExtResource("5_glbon")]
visible = false
layout_mode = 1

[node name="Hints" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -186.0
offset_top = -42.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HintsContainer" type="HBoxContainer" parent="Menu/Hints"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="AButton" type="HBoxContainer" parent="Menu/Hints/HintsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/Hints/HintsContainer/AButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Ⓐ "
horizontal_alignment = 2
vertical_alignment = 1

[node name="Select" type="Label" parent="Menu/Hints/HintsContainer/AButton"]
layout_mode = 2
text = "Select"
vertical_alignment = 1

[node name="BButton" type="HBoxContainer" parent="Menu/Hints/HintsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/Hints/HintsContainer/BButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Ⓑ"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Select" type="Label" parent="Menu/Hints/HintsContainer/BButton"]
layout_mode = 2
text = "Cancel"
vertical_alignment = 1

[node name="ButtonsIcon" type="VBoxContainer" parent="Menu/Hints/HintsContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="A" type="Label" parent="Menu/Hints/HintsContainer/ButtonsIcon"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Ⓐ"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="B" type="Label" parent="Menu/Hints/HintsContainer/ButtonsIcon"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Ⓑ"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ButtonsLabel" type="VBoxContainer" parent="Menu/Hints/HintsContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Select" type="Label" parent="Menu/Hints/HintsContainer/ButtonsLabel"]
layout_mode = 2
text = "Select"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Select2" type="Label" parent="Menu/Hints/HintsContainer/ButtonsLabel"]
layout_mode = 2
text = "Cancel"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="pressed" from="Menu/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Ranking" to="." method="_on_ranking_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
